cabal-version: 3.0
name:          hat-lexicon
version:       0.1.0.0
homepage:      https://github.com/t4ccer/hat
license:       AGPL-3.0-or-later
author:        t4ccer
maintainer:    t4ccer@gmail.com
category:      Web
build-type:    Simple

library
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , mtl
    , text
    , transformers

  -- cabal-fmt: expand .
  exposed-modules:
    Hat.Lexicon.Printer.Haskell
    Hat.Lexicon.Schema
