cabal-version: 3.0
name:          hat-types
version:       0.1.0.0
homepage:      https://github.com/t4ccer/hat
license:       AGPL-3.0-or-later
author:        t4ccer
maintainer:    t4ccer@gmail.com
category:      Web
build-type:    Simple

library
  ghc-options:
    -Wall -Wno-unused-imports -Wno-unused-matches -Wno-name-shadowing

  build-depends:
    , aeson
    , base
    , bytestring
    , servant
    , text

  default-language: Haskell2010

  -- cabal-fmt: expand .
  exposed-modules:
    App.Bsky.Actor.Defs
    App.Bsky.Actor.GetPreferences
    App.Bsky.Actor.GetProfile
    App.Bsky.Actor.GetProfiles
    App.Bsky.Actor.GetSuggestions
    App.Bsky.Actor.Profile
    App.Bsky.Actor.PutPreferences
    App.Bsky.Actor.SearchActors
    App.Bsky.Actor.SearchActorsTypeahead
    App.Bsky.Embed.Defs
    App.Bsky.Embed.External
    App.Bsky.Embed.Images
    App.Bsky.Embed.Record
    App.Bsky.Embed.RecordWithMedia
    App.Bsky.Embed.Video
    App.Bsky.Feed.Defs
    App.Bsky.Feed.DescribeFeedGenerator
    App.Bsky.Feed.Generator
    App.Bsky.Feed.GetActorFeeds
    App.Bsky.Feed.GetActorLikes
    App.Bsky.Feed.GetAuthorFeed
    App.Bsky.Feed.GetFeed
    App.Bsky.Feed.GetFeedGenerator
    App.Bsky.Feed.GetFeedGenerators
    App.Bsky.Feed.GetFeedSkeleton
    App.Bsky.Feed.GetLikes
    App.Bsky.Feed.GetListFeed
    App.Bsky.Feed.GetPosts
    App.Bsky.Feed.GetPostThread
    App.Bsky.Feed.GetQuotes
    App.Bsky.Feed.GetRepostedBy
    App.Bsky.Feed.GetSuggestedFeeds
    App.Bsky.Feed.GetTimeline
    App.Bsky.Feed.Like
    App.Bsky.Feed.Post
    App.Bsky.Feed.Postgate
    App.Bsky.Feed.Repost
    App.Bsky.Feed.SearchPosts
    App.Bsky.Feed.SendInteractions
    App.Bsky.Feed.Threadgate
    App.Bsky.Graph.Block
    App.Bsky.Graph.Defs
    App.Bsky.Graph.Follow
    App.Bsky.Graph.GetActorStarterPacks
    App.Bsky.Graph.GetBlocks
    App.Bsky.Graph.GetFollowers
    App.Bsky.Graph.GetFollows
    App.Bsky.Graph.GetKnownFollowers
    App.Bsky.Graph.GetList
    App.Bsky.Graph.GetListBlocks
    App.Bsky.Graph.GetListMutes
    App.Bsky.Graph.GetLists
    App.Bsky.Graph.GetMutes
    App.Bsky.Graph.GetRelationships
    App.Bsky.Graph.GetStarterPack
    App.Bsky.Graph.GetStarterPacks
    App.Bsky.Graph.GetSuggestedFollowsByActor
    App.Bsky.Graph.List
    App.Bsky.Graph.Listblock
    App.Bsky.Graph.Listitem
    App.Bsky.Graph.MuteActor
    App.Bsky.Graph.MuteActorList
    App.Bsky.Graph.MuteThread
    App.Bsky.Graph.Starterpack
    App.Bsky.Graph.UnmuteActor
    App.Bsky.Graph.UnmuteActorList
    App.Bsky.Graph.UnmuteThread
    App.Bsky.Labeler.Defs
    App.Bsky.Labeler.GetServices
    App.Bsky.Labeler.Service
    App.Bsky.Notification.GetUnreadCount
    App.Bsky.Notification.ListNotifications
    App.Bsky.Notification.PutPreferences
    App.Bsky.Notification.RegisterPush
    App.Bsky.Notification.UpdateSeen
    App.Bsky.Richtext.Facet
    App.Bsky.Unspecced.Defs
    App.Bsky.Unspecced.GetPopularFeedGenerators
    App.Bsky.Unspecced.GetSuggestionsSkeleton
    App.Bsky.Unspecced.GetTaggedSuggestions
    App.Bsky.Unspecced.SearchActorsSkeleton
    App.Bsky.Unspecced.SearchPostsSkeleton
    App.Bsky.Video.Defs
    App.Bsky.Video.GetJobStatus
    App.Bsky.Video.GetUploadLimits
    App.Bsky.Video.UploadVideo
    Chat.Bsky.Actor.Declaration
    Chat.Bsky.Actor.Defs
    Chat.Bsky.Actor.DeleteAccount
    Chat.Bsky.Actor.ExportAccountData
    Chat.Bsky.Convo.Defs
    Chat.Bsky.Convo.DeleteMessageForSelf
    Chat.Bsky.Convo.GetConvo
    Chat.Bsky.Convo.GetConvoForMembers
    Chat.Bsky.Convo.GetLog
    Chat.Bsky.Convo.GetMessages
    Chat.Bsky.Convo.LeaveConvo
    Chat.Bsky.Convo.ListConvos
    Chat.Bsky.Convo.MuteConvo
    Chat.Bsky.Convo.SendMessage
    Chat.Bsky.Convo.SendMessageBatch
    Chat.Bsky.Convo.UnmuteConvo
    Chat.Bsky.Convo.UpdateRead
    Chat.Bsky.Moderation.GetActorMetadata
    Chat.Bsky.Moderation.GetMessageContext
    Chat.Bsky.Moderation.UpdateActorAccess
    Com.Atproto.Admin.Defs
    Com.Atproto.Admin.DeleteAccount
    Com.Atproto.Admin.DisableAccountInvites
    Com.Atproto.Admin.DisableInviteCodes
    Com.Atproto.Admin.EnableAccountInvites
    Com.Atproto.Admin.GetAccountInfo
    Com.Atproto.Admin.GetAccountInfos
    Com.Atproto.Admin.GetInviteCodes
    Com.Atproto.Admin.GetSubjectStatus
    Com.Atproto.Admin.SearchAccounts
    Com.Atproto.Admin.SendEmail
    Com.Atproto.Admin.UpdateAccountEmail
    Com.Atproto.Admin.UpdateAccountHandle
    Com.Atproto.Admin.UpdateAccountPassword
    Com.Atproto.Admin.UpdateSubjectStatus
    Com.Atproto.Identity.GetRecommendedDidCredentials
    Com.Atproto.Identity.RequestPlcOperationSignature
    Com.Atproto.Identity.ResolveHandle
    Com.Atproto.Identity.SignPlcOperation
    Com.Atproto.Identity.SubmitPlcOperation
    Com.Atproto.Identity.UpdateHandle
    Com.Atproto.Label.Defs
    Com.Atproto.Label.QueryLabels
    Com.Atproto.Label.SubscribeLabels
    Com.Atproto.Moderation.CreateReport
    Com.Atproto.Moderation.Defs
    Com.Atproto.Repo.ApplyWrites
    Com.Atproto.Repo.CreateRecord
    Com.Atproto.Repo.Defs
    Com.Atproto.Repo.DeleteRecord
    Com.Atproto.Repo.DescribeRepo
    Com.Atproto.Repo.GetRecord
    Com.Atproto.Repo.ImportRepo
    Com.Atproto.Repo.ListMissingBlobs
    Com.Atproto.Repo.ListRecords
    Com.Atproto.Repo.PutRecord
    Com.Atproto.Repo.StrongRef
    Com.Atproto.Repo.UploadBlob
    Com.Atproto.Server.ActivateAccount
    Com.Atproto.Server.CheckAccountStatus
    Com.Atproto.Server.ConfirmEmail
    Com.Atproto.Server.CreateAccount
    Com.Atproto.Server.CreateAppPassword
    Com.Atproto.Server.CreateInviteCode
    Com.Atproto.Server.CreateInviteCodes
    Com.Atproto.Server.CreateSession
    Com.Atproto.Server.DeactivateAccount
    Com.Atproto.Server.Defs
    Com.Atproto.Server.DeleteAccount
    Com.Atproto.Server.DeleteSession
    Com.Atproto.Server.DescribeServer
    Com.Atproto.Server.GetAccountInviteCodes
    Com.Atproto.Server.GetServiceAuth
    Com.Atproto.Server.GetSession
    Com.Atproto.Server.ListAppPasswords
    Com.Atproto.Server.RefreshSession
    Com.Atproto.Server.RequestAccountDelete
    Com.Atproto.Server.RequestEmailConfirmation
    Com.Atproto.Server.RequestEmailUpdate
    Com.Atproto.Server.RequestPasswordReset
    Com.Atproto.Server.ReserveSigningKey
    Com.Atproto.Server.ResetPassword
    Com.Atproto.Server.RevokeAppPassword
    Com.Atproto.Server.UpdateEmail
    Com.Atproto.Sync.GetBlob
    Com.Atproto.Sync.GetBlocks
    Com.Atproto.Sync.GetCheckout
    Com.Atproto.Sync.GetHead
    Com.Atproto.Sync.GetLatestCommit
    Com.Atproto.Sync.GetRecord
    Com.Atproto.Sync.GetRepo
    Com.Atproto.Sync.GetRepoStatus
    Com.Atproto.Sync.ListBlobs
    Com.Atproto.Sync.ListRepos
    Com.Atproto.Sync.NotifyOfUpdate
    Com.Atproto.Sync.RequestCrawl
    Com.Atproto.Sync.SubscribeRepos
    Com.Atproto.Temp.CheckSignupQueue
    Com.Atproto.Temp.FetchLabels
    Com.Atproto.Temp.RequestPhoneVerification
    Tools.Ozone.Communication.CreateTemplate
    Tools.Ozone.Communication.Defs
    Tools.Ozone.Communication.DeleteTemplate
    Tools.Ozone.Communication.ListTemplates
    Tools.Ozone.Communication.UpdateTemplate
    Tools.Ozone.Moderation.Defs
    Tools.Ozone.Moderation.EmitEvent
    Tools.Ozone.Moderation.GetEvent
    Tools.Ozone.Moderation.GetRecord
    Tools.Ozone.Moderation.GetRecords
    Tools.Ozone.Moderation.GetRepo
    Tools.Ozone.Moderation.GetRepos
    Tools.Ozone.Moderation.QueryEvents
    Tools.Ozone.Moderation.QueryStatuses
    Tools.Ozone.Moderation.SearchRepos
    Tools.Ozone.Server.GetConfig
    Tools.Ozone.Set.AddValues
    Tools.Ozone.Set.Defs
    Tools.Ozone.Set.DeleteSet
    Tools.Ozone.Set.DeleteValues
    Tools.Ozone.Set.GetValues
    Tools.Ozone.Set.QuerySets
    Tools.Ozone.Set.UpsertSet
    Tools.Ozone.Signature.Defs
    Tools.Ozone.Signature.FindCorrelation
    Tools.Ozone.Signature.FindRelatedAccounts
    Tools.Ozone.Signature.SearchAccounts
    Tools.Ozone.Team.AddMember
    Tools.Ozone.Team.Defs
    Tools.Ozone.Team.DeleteMember
    Tools.Ozone.Team.ListMembers
    Tools.Ozone.Team.UpdateMember
